# rechunker

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  algorithm.ipynb  pyproject.toml  setup.cfg  setup.py  try_API.ipynb
.github/workflows/: ci.yaml  release.yaml
docs/: algorithm.rst  api.rst  conf.py  contributing.rst  executors.rst  index.rst  release_notes.rst  requirements.txt  tutorial.ipynb
rechunker/: __init__.py  _version.py  algorithm.py  api.py  compat.py  core.py  dask.py  pipeline.py  rechunker.py  types.py  util.py
rechunker/executors/: __init__.py  beam.py  dask.py  lithops.py  pipeline.py  prefect.py  python.py  pywren.py  util.py
tests/: __init__.py  integration_test.py  test_algorithm.py  test_compat.py  test_pipelines.py  test_rechunk.py  test_rechunk_cm.py  test_rechunker.py  test_util.py  test_zarr_rechunker.py
zarr_rechunker/: zarr_rechunker.py
