[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm[toml]>=3.4",
  "wheel",
]

[project]
name = "rechunker"
description = "A library for rechunking arrays"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Pangeo developers", email = "ryan.abernathey@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [
  "version",
]
dependencies = [
  "dask[array,diagnostics]",
  "mypy-extensions",
  "zarr>=2.11,<3",
]
optional-dependencies.complete = [
  "apache-beam",
  "fsspec",
  "prefect<2",
  "pyyaml",
  "xarray>=2022.3",
]
optional-dependencies.dev = [
  "black",
  "codecov",
  "flake8",
  "hypothesis",
  "ipython",
  "mypy",
  "nbsphinx",
  "numpydoc",
  "pytest",
  "pytest-cov",
  "sphinx",
  "sphinx-pangeo-theme",
  "sphinxcontrib-srclinks",
]
optional-dependencies.docs = [
  "ipython",
  "nbsphinx",
  "numpydoc",
  "sphinx",
  "sphinx-pangeo-theme",
  "sphinxcontrib-srclinks",
]
optional-dependencies.test = [
  "hypothesis",
  "pytest",
]
urls.documentation = "https://rechunker.readthedocs.io"
urls.homepage = "https://pypi.org/project/rechunker/"
urls.repository = "https://github.com/pangeo-data/rechunker"

[tool.setuptools]
packages = [ "rechunker" ]

[tool.setuptools_scm]
write_to = "rechunker/_version.py"
write_to_template = "__version__ = '{version}'"
